# nla-fraud

./: .gitignore  README.md  experiment.ipynb  plan.md  pyproject.toml
configs/: experiment.yaml
docs/: IMPROVEMENTS.md  RUNBOOK.md
scripts/: run_phase5.sh  vast.sh  vast_setup.sh
src/: collect_activations.py  diagnose_adapter.py  gen_summaries.py  get_data.py  nla_common.py  rl_grpo.py  roundtrip_eval.py  serialize.py  sft_ar.py  sft_av.py  target_model.py
