[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nla-fraud"
version = "0.1.0"
description = "Natural Language Autoencoders applied to a tabular payments-fraud DNN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "anthropic>=0.25",
    "openai>=1.30",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "faker>=24.0",
    "numpy>=1.26",
    "kaggle>=1.6",
    "tqdm>=4.66",
    "ipykernel>=7.3.0",
]

[project.optional-dependencies]
shap = ["shap>=0.45"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []

# PyPI ships torch built against CUDA 13; GPU boxes (e.g. Vast A100s on driver
# 570.x / CUDA 12.8) cannot initialise it. Pull the cu128 build on Linux and
# leave macOS on the default PyPI wheel for local CPU/MPS work.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
